# MyTravelApp

./: build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: annoy_index.ann
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/mytravelapp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
tests/: test_hamming.cpp
